--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/x-icon"
-    href="src\assets\favicon.jpg" />
+  <link rel="icon" type="image" href="public/assets/favicon.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta name="description" content="Descubre alimentos congelados saludables y deliciosos en Natural Icy Market. Con conveniencia y sabor en mente, ofrecemos una selección de opciones naturales que te ayudarán a mantener un estilo de vida saludable sin complicaciones. ¡Haz que comer bien sea fácil con nosotros!">
+
+  <meta name="keywords" content="natural, congelado, congelados, rico, fácil, almacén natural, market, hamburguesa, hamburguesas, helado, helados, alimentos, alimento, comida, envío">
+
+  <meta name="author" content="Equipo CH" />
+
+  <meta name="copyright" content="Equipo CH" />
+
+  <meta property="og:title" content="Natural Icy Market" />
+
+  <meta property="og:description" content="Descubre alimentos congelados saludables y deliciosos en Natural Icy Market. Con conveniencia y sabor en mente, ofrecemos una selección de opciones naturales que te ayudarán a mantener un estilo de vida saludable sin complicaciones. ¡Haz que comer bien sea fácil con nosotros!" />
+
+  <meta property="og:image" content="public/assets/favicon.jpg" />
+
+  <meta property="og:type" content="website" />
+
+  <meta property="og: locale" content="es_ES" />
+
   <title>Natural Icy Market</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.googleapis.com">
