--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta property="og:description" content="Descubre alimentos congelados saludables y deliciosos en Natural Icy Market. Con conveniencia y sabor en mente, ofrecemos una selección de opciones naturales que te ayudarán a mantener un estilo de vida saludable sin complicaciones. ¡Haz que comer bien sea fácil con nosotros!" />
 
-  <meta property="og:image" content="public/assets/favicon.jpg" />
+  <meta property="og:image" content="./public/assets/favicon.jpg" />
 
   <meta property="og:type" content="website" />
 
